# tilt-mcp

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  DOCKER_OPTIMIZATION.md  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: docker-build.yml
docs/: installation.md
examples/: basic_usage.py
src/tilt_mcp/: .dockerignore  __init__.py  py.typed  server.py
tests/: __init__.py  test_server.py
