[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tilt-mcp"
version = "0.1.3"
description = "Model Context Protocol server for Tilt - interact with Tilt resources through MCP"
authors = [
    {name = "Aryan Agrawal", email = "aryan.agrawal@glean.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["mcp", "tilt", "kubernetes", "development", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/aryan-agrawal-glean/tilt-mcp"
"Bug Tracker" = "https://github.com/aryan-agrawal-glean/tilt-mcp/issues"
"Documentation" = "https://github.com/aryan-agrawal-glean/tilt-mcp#readme"

[project.scripts]
tilt-mcp = "tilt_mcp.server:main"
tilt-mcp-server = "tilt_mcp.server:main"  # Alternative name

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tilt_mcp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]  # Line too long - handled by black

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto" 